[package]
name = "boss"
version = "0.1.0"
authors = ["Chuck Musser <cmusser@sonic.net>"]

[dependencies]
clap = "2"
daemonize = "0.3.0"
futures = "0.1"
hyper = "0.12"
net2 = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
tokio = "0.1"
tokio-core = "0.1"
tokio-process = "0.2"

[lib]
name = "boss"
path = "src/lib.rs"

[[bin]]
name = "boss"
path = "src/boss.rs"