[package]
name = "boss"
version = "2.0.0"
authors = ["Chuck Musser <cmusser@sonic.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
nix = { git = "https://github.com/cmusser/nix.git", branch="topic/dragonfly-use-errno-location" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
shellwords = "1"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros", "process", "signal"] }

[[bin]]
name = "boss"
path = "src/boss.rs"
